[package]
name = "k8s-collector-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "k8s-collector"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
k8s-collector = { path = "../k8s-collector" }
env_logger = "0.11"
k8s-openapi = { version = "0.26", features = ["v1_30"] }
