[package]
name = "k8s-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "net", "io-util"], default-features = false }
futures-util = { version = "0.3" }
thiserror = "1"
log = "0.4"
# K8s watcher stack
kube = { version = "2.0.1", features = ["runtime", "client", "rustls-tls"] }
k8s-openapi = { version = "0.26" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoder_ebpf_net_ingest = { path = "../render/ebpf_net/ingest" }
lz4_flex = { version = "0.11", features = ["frame"] }
tokio-util = { version = "0.7", features = ["io-util"] }

[dev-dependencies]
k8s-openapi = { version = "0.26", features = ["v1_30"] }
proptest = "1"
