[package]
name = "reducer"
version = "0.1.0"
edition = "2021"

[lib]
name = "reducer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reducer-sys = { workspace = true }
element-queue = { path = "../element-queue" }
timeslot = { path = "../timeslot" }
render_parser = { workspace = true }
encoder_ebpf_net_aggregation = { path = "../render/ebpf_net/aggregation" }
cxx = "1"
rc-hashmap = { workspace = true }
otlp_export = { workspace = true }

[dev-dependencies]
proptest = "1"
